hphp/test/zend/bad/bug43200_2.php
<?php

interface A {
	function foo();
}

abstract class B implements A {
	abstract public function foo();
}

class C extends B {
	public function foo() {
		echo 'works';
	}
}

$o = new C();
$o->foo();

?>